--- a/docs/request/lay.css
+++ b/docs/request/lay.css
@@ -52,6 +52,7 @@ body {
     font-weight: 300;
     margin-bottom: 8px;
     color: var(--damso-color-primary);
+    text-shadow: 0 1px 2px rgba(255, 255, 255, 0.8);
 }
 
 .damso-header__description {
